# PysicalBasedRaytracer

./: .gitignore  CMakeLists.txt  README.md
Accelerator/: BVHAccel.cpp  BVHAccel.h  README.md
Camera/: Camera.cpp  Camera.h  Orthographic.cpp  Orthographic.h  Perspective.cpp  Perspective.h  README.md
Core/: FrameBuffer.h  Geometry.h  Interaction.cpp  Interaction.h  Memory.h  PBR.h  Primitive.cpp  Primitive.h  README.md  Scene.cpp  Scene.h  Spectrum.cpp  Spectrum.h  Transform.cpp  Transform.h
Integrator/: DirectLightingIntegrator.cpp  DirectLightingIntegrator.h  Integrator.cpp  Integrator.h  PathIntegrator.cpp  PathIntegrator.h  README.md  VolPathIntegrator.cpp  VolPathIntegrator.h  WhittedIntegrator.cpp  WhittedIntegrator.h
Light/: DiffuseLight.cpp  DiffuseLight.h  InfiniteAreaLight.cpp  InfiniteAreaLight.h  Light.cpp  Light.h  LightDistrib.cpp  LightDistrib.h  PointLight.cpp  PointLight.h  README.md  SkyBoxLight.cpp  SkyBoxLight.h
Main/: README.md  main.cpp
Material/: Fresnel.cpp  Fresnel.h  GlassMaterial.cpp  GlassMaterial.h  Material.cpp  Material.h  MatteMaterial.cpp  MatteMaterial.h  MetalMaterial.cpp  MetalMaterial.h  Microfacet.cpp  Microfacet.h  Mirror.cpp  Mirror.h  PlasticMaterial.cpp  PlasticMaterial.h  README.md  Reflection.cpp  Reflection.h
Media/: GridDensityMedium.cpp  GridDensityMedium.h  HomogeneousMedium.cpp  HomogeneousMedium.h  Medium.cpp  Medium.h
Sampler/: ClockRand.cpp  ClockRand.h  Halton.cpp  Halton.h  LowDiscrepancy.cpp  LowDiscrepancy.h  README.md  RNG.h  Sampler.cpp  Sampler.h  Sampling.cpp  Sampling.h  SobolMatrices.cpp  SobolMatrices.h  TimeClockRandom.h
Shape/: ModelLoad.cpp  ModelLoad.h  README.md  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  plyRead.h
Texture/: ConstantTexture.cpp  ConstantTexture.h  ImageTexture.cpp  ImageTexture.h  MIPMap.cpp  MIPMap.h  README.md  Texture.cpp  Texture.h
